--- a/src/manifest.json
+++ b/src/manifest.json
@@ -51,6 +51,7 @@
         "icon-34.png",
         "raicon20x20.png",
         "raiconvector.png",
+        "xrepl-light.png",
         "raicon.png"
       ],
       "matches": [
