Implement subscription plan system with tier-based limits
- Add subscriptionPlans.json with 4 tiers (free, basic, pro, ultimate)
- Add subscription plan selection in Settings Packages tab
- Filter content packages and models based on selected plan
- Add Generation tab with configurable goals, variants, and tones
- Update getUserPackages to handle allContent flag for Ultimate plan
- Remove hardcoded 1-goal limit for base packages
- Use apiConfig.numGoals, numVariants, and numTones throughout generation logic
- Auto-select all packages when upgrading to Ultimate plan
- Reset settings when downgrading plans

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "ResponseABLE.ai",
-  "description": "Responsible AI for Every Response",
+  "name": "xReplAI",
+  "description": "Drafts that convert",
   "options_page": "options.html",
   "background": {
     "service_worker": "background.bundle.js"
