--- a/src/manifest.json
+++ b/src/manifest.json
@@ -49,7 +49,7 @@
         "content.styles.css",
         "icon-128.png",
         "icon-34.png",
-        "raicon20x20.png",
+        "xrepl-dark.png",
         "raiconvector.png",
         "xrepl-light.png",
         "raicon.png"
