feat: update manifest version and improve build process
- Updated manifest version to 3.12 and added versioning to the build output filename.
- Enhanced the build script to read the package version and manifest version dynamically.
- Implemented a mechanism to create a downloads directory for the output zip file, improving file organization.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,6 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 3.12,
+  "version": "1.0.10",
   "name": "xReplAI",
   "description": "Drafts that convert",
   "options_page": "options.html",
