feat: update README and enhance icon handling in manifest and components
- Added a Chrome Web Store submission checklist to the README for better guidance on publishing.
- Updated the manifest to include a new 48px icon and added additional resources for permissions.
- Enhanced the Options and Popup components with updated branding images and improved styling for better visual presentation.
- Refactored CSS for Options and Popup pages to accommodate new branding and layout adjustments.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,6 +12,7 @@
     "default_icon": "raicon.png"
   },
   "icons": {
+    "48": "icon-48.png",
     "128": "raicon.png"
   },
   "permissions": [
@@ -44,10 +45,12 @@
     {
       "resources": [
         "content.styles.css",
+        "icon-48.png",
         "icon-128.png",
         "xrepl-dark.png",
         "xrepl-light.png",
-        "raicon.png"
+        "raicon.png",
+        "xReplAI-brandw.png"
       ],
       "matches": [
         "http://*/*",
