chore: update package and manifest for xReplAI branding
- Changed project name from chrome-extension-boilerplate-react to xreplai-extension.
- Updated version to 1.0.10 and modified description to reflect new functionality.
- Added homepage link for xReplAI.
- Enhanced manifest description for clarity on features.
- Adjusted host permissions and content script matches to align with new branding and functionality.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "chrome-extension-boilerplate-react",
-  "version": "5.0.4",
-  "description": "ResponseAble: AI Sales email Drafter",
+  "name": "xreplai-extension",
+  "version": "1.0.10",
+  "description": "xReplAI - AI-powered email draft generation for Gmail and LinkedIn",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/lxieyang/chrome-extension-boilerplate-react.git"
-  },
+  "homepage": "https://xrepl.app",
   "scripts": {
     "build": "node utils/build.js",
     "start": "node utils/webserver.js",
