refactor: enhance input detection logic and improve button injection for LinkedIn

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,7 +33,8 @@
       "css": [
         "content.styles.css"
       ],
-      "run_at": "document_end"
+      "run_at": "document_end",
+      "all_frames": true
     }
   ],
   "web_accessible_resources": [
