chore: update version and enhance license key handling
- Bumped version to 1.0.11 in package.json and manifest.json.
- Added background script to handle license key transfer from the xrepl.ai website.
- Implemented storage change listener in Popup to update license key dynamically.
- Updated Popup messaging for clarity on license activation process.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "version": "1.0.10",
+  "version": "1.0.11",
   "name": "xReplAI",
   "description": "AI-powered email draft generation for Gmail and LinkedIn. Multi-variant replies with style mimicking and tone selection.",
   "options_page": "options.html",
@@ -21,6 +21,12 @@
   "host_permissions": [
     "https://xrepl.app/*"
   ],
+  "externally_connectable": {
+    "matches": [
+      "https://xrepl.ai/*",
+      "https://www.xrepl.ai/*"
+    ]
+  },
   "content_scripts": [
     {
       "matches": [
