refactor: improve LinkedIn integration with shadow DOM support and enhance input detection
- Updated input detection logic to query elements across both the main document and LinkedIn's shadow DOM.
- Added a retry mechanism for waiting on the Chrome runtime API availability.
- Enhanced messaging context detection for LinkedIn to improve reliability in various scenarios.

--- a/.cursorignore
+++ b/.cursorignore
@@ -1,9 +1,10 @@
-﻿# Exclude node_modules (thousands of files - major performance impact)
+# Exclude node_modules (thousands of files - major performance impact)
 node_modules/
 
 # Exclude documentation from semantic search
 *.md
 !README.md
+!docs/FUTURE_ENHANCEMENTS.md
 
 # Build outputs
 build/
